--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dbyte - Hardware & Software Solutions</title>
-    <link rel="icon" href="LOGO-DBYTE.jpg" type="image/jpg"> <!-- Favicon de Dbyte -->
+    <link rel="icon" href="LOGO DBYTE.png" type="image/png"> <!-- Favicon de Dbyte -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -101,7 +101,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="LOGO-DBYTE.jpg" alt="Dbyte Logo" class="logo">
+        <img src="LOGO DBYTE.png" alt="Dbyte Logo" class="logo">
         <h1>Bienvenido a Dbyte</h1>
         <p class="paragraph-with-spacing">Soluciones tecnológicas en hardware y desarrollo de software. Pronto podrás conocer más sobre nuestros servicios.</p>
         <p class="highlighted-text">¡Contáctanos ahora para soluciones personalizadas!</p>
